# Learning-Alliance

./: app.py  mcp_analysis_state.json
docs/D/: 01.AI的能力定义.md  02.大模型认知.md  03.Prompt提示工程.md  04.Function Calling.md  05.RAG.md  06.LangChain.md  07.Agent.md
docs/D/Demo/: 02.大模型认知Demo.py  04.FunctionCallDemo.py  05-1.RAGDemo.py  05-2.RAGASDemo.py  05.RAGDemo.py  06-1.LangChain_chatModels.py  06-10.LangChain_chainDemo.py  06-11.LangChain_pdf.py  06-12.AgentDemo.py  06-13.Agent_ReAct.py  06-14.Agent_memory.py  06-2.LangChain_outputParsers.py  06-3.LangChain_faiss.py  06-4.LangChain_rag.py  06-5.LangChain_agent.py  06-6.LangChain_template.py  06-7.LangChain_embedding.py  06-8.LangChain_parser.py  06-9.LangChain_openaiFunc.py  07-1.AgentDemo.py  07-1.LangSmith.py  07-2.Agent_ReAct.py  08-1.MCP.py  12-1.LangGraphDemo.py  12-2.LangGraph-Memory.py  12-3.LangGraph-interruput.py  12-4.LangGraph-Graph.py  (+6 more)
docs/D/Demo/A2A-Resource-Processor/image-processor/: README.md  pyproject.toml
docs/D/Demo/A2A-Resource-Processor/image-processor/app/: __init__.py  __main__.py  agent.py  agent_executor.py  server.py
docs/D/Demo/A2A-Resource-Processor/resource-replacer/: README.md  pyproject.toml
docs/D/Demo/A2A-Resource-Processor/resource-replacer/app/: __init__.py  __main__.py  agent.py  agent_executor.py  server.py
python_docs/: learn_step.md  week01.md
python_docs/Demo/: func_test.py  hello.py  week01Demo.py  week01Leetcode.py
test_demo/: README.md  create_test_images.py  enhanced_test_client.py  quick_start.sh  run_demo.py  stream_demo.py
weekly-note/: AI的能力定义：.md  推荐阅读.md
(+118 files in other folders)
